<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- The user visible name of the application. [CHAR LIMIT=20] -->
    <string name="application_name">VERONA</string>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="retry">Retry</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="selection_default_none">Default (none)</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>


    <!--
    [UFRGS] VERONA colors and strings
    -->

    <!--colors-->
    <color name="def">#3F51B5</color>
    <color name="dark">#303F9F</color>
    <color name="darker">#000099</color>
    <color name="accent">#3333FF</color>
    <color name="wht">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="gray">#808080</color>

    <string name="version">Version 1.0.0</string>
    <string name="developed">Developed by the \nFederal University of Rio Grande do Sul</string>
    <string name="futebol">2016 - 2017 FUTEBOL</string>


    <!--<item name="colorPrimaryDark">#303F9F</item>-->
    <!--<item name="colorAccent">#66B2FF</item>-->

    <!--strings-->

    <!--General-->
    <string name="script">Experiment</string>
    <string name="name">Name</string>
    <string name="age">Your age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ready">I\'m ready!</string>

    <!--Dashboard Acttivty-->
    <string name="create_new_exp">Click to create a new script</string>

    <!--Exp Item-->
    <string name="ipport">ip:port</string>
    <string name="filename">filename</string>
    <string name="savedas">Saved as:</string>
    <string name="provider">Provider IP:</string>

    <!--Script configuration-->
    <string name="exp_name_title">Experiment name</string>
    <string name="my_exps">My Experiments</string>
    <string name="my_videos">My videos</string>
    <string name="file_name_title">Name of file to save results</string>
    <string name="provider_title">Provider address</string>
    <string name="ask_info">Ask for user personal information</string>
    <string name="ask_age">Ask for age?</string>
    <string name="ask_gender">Ask for gender?</string>
    <string name="ask_cons">Ask for consumption level?</string>
    <string name="ask_fam">Ask for familiarity level?</string>
    <string name="ask_info_description">If checked, the script will ask some volunteer information, such as age, gender and levels of video streaming consumption and mobile streaming knowledge</string>
    <string name="instructions_desc">Write here a description about your experiment</string>
    <string name="instructions_example">\t\t\t\t\t\t\tDescribe your script</string>
    <string name="address_example">143.54.12.21:8081/manifest</string>
    <string name="file_example">myfile (no extension)</string>


    <!--Old-->
    <string name="play_uc">PLAY</string>
    <string name="samples_uc">SAMPLES</string>

    <!--Metric-->
    <string name="type">Type</string>
    <string name="metric">Metric</string>
    <string name="used">Used</string>

    <!--Script-->
    <string name="use_dash">Use DASH</string>
    <string name="videoext">video.ext</string>
    <string name="address">address</string>
    <string name="address_description">Video Provider address</string>
    <string name="video_name">Video name</string>
    <string name="video_ext">Video extension</string>
    <string name="video_loop">Number of Repetitions</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_video_found">No video was found to add to this experiment.\nCreate a new video through the navigation tab!\nYou will be able to add it to any experiment.</string>

    <string name="inst_1">With <b>VERONA</b>, you\'re able to create any type of video experiment.\n\nTo start, go in the side menu and select <b>\'New Video\'</b> to register a new video.\n\nYou will be able to use this videos for one or more experiments.\n\nFor each video, you can select different <b>subjective QoE metrics</b>.\n\nAlso, you can use videos from different providers and it\'s all saved in your device!</string>
    <string name="inst_2">After registering your videos, you\'re able to <b>create your experiments</b>, with one more of the previously created videos.\n\nTo create an experiment, you have to provide some information, such as the <b>experiment name</b>, the <b>name of the file</b> where it will be saved and some <b>instructions</b> .\n\nAll the video information will be saved in the <b>file with the provided name</b>. In this way, you\'re able to share an experiment to other device!\n\nFor each experiment, you can select QoS and objective QoE metrics.</string>
    <string name="inst_3">After each video exhibition, a new line is added to a log file <b>containing the results</b>.\n\nThe saved metrics are the ones selected during the video and the experiment creation. The file with the results will also be the one provided when you created your experiment.\n\nIf you want to see this tutorial again, just go to <b>\'Tutorial\'</b> in the side menu.\n\nThat\'s it, thanks for using <b>VERONA</b>!</string>

    <string name="new_experiment">New Experiment</string>
    <string name="import_experiment">Import Experiment</string>
    <string name="export_experiment">Export Experiment</string>
    <string name="new_video">New Video</string>
    <string name="import_videos">Import Videos</string>
    <string name="export_videos">Export Videos</string>
    <string name="tutorial">Tutorial</string>
    <string name="about">About</string>

    <string name="how_familiar">How familiar are you with video streaming technologies?</string>
    <string name="familiar_aux">1 is unfarmilar and 5 is very familiar</string>
    <string name="consumption">What is your video streaming consumption level?</string>
    <string name="consumption_aux">1 is \'I don\'t use video streaming services\' and 5 is \'I use it everyday\'</string>
    <string name="no_exps"><b>Welcome to VERONA!</b>\nTo start, use the menu in the left to register your videos and create your experiments!</string>

    <string name="go_ahead">Start exhibition</string>
    <string name="skip">I don\'t want to answer</string>
    <string name="select_metrics">Select the metrics for this video</string>

</resources>
